# python-project-52

./: .dockerignore  .gitignore  Dockerfile  Makefile  PATH  README.md  amvera.yml  build.sh  db.sqlite3  docker-compose.yml  dotenv  inventory.ini  manage.py  playbook.yml  pyproject.toml  pytest.ini  render.yaml  requirements.txt  requirements.yml  ruff.toml  setup.yml  start.sh
.github/workflows/: main.yml
group_vars/all/: vault.yml
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
locale/ru/LC_MESSAGES/: django.mo  django.po
static/: navbar.css
staticfiles/: footers.7484ae289461.css  staticfiles.json
task_manager/: forms.py  mixins.py  rollbar_middleware.py  settings.py  urls.py  views.py
task_manager/apps/label/: apps.py  views.py
task_manager/apps/status/: apps.py  views.py
task_manager/apps/task/: apps.py  filters.py  models.py  views.py
task_manager/apps/user/: apps.py  forms.py  views.py
task_manager/label/: forms.py  models.py  urls.py  views.py
task_manager/label/fixtures/: label_test.json
task_manager/label/migrations/: 0001_initial.py
task_manager/status/: forms.py  models.py  urls.py  views.py
task_manager/status/fixtures/: status_test.json
task_manager/task/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/templates/: base.html  home.html  index.html  layout.html  login.html  navbar.html
task_manager/tests/: test_filters.py  test_labels.py  test_status.py  test_statuses.py  test_tasks.py  test_users.py
task_manager/user/: forms.py  models.py  urls.py  views.py
(+51 files in other folders)
