[project]
name = "python-project-52"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcc>=0.1.10",
    "dj-database-url>=2.3.0",
    "django>=5.1.6",
    "django-admin>=2.0.2",
    "django-bootstrap5>=24.3",
    "gunicorn>=23.0.0",
    "load-dotenv>=0.1.0",
    "numpy>=2.2.2",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]
